changes in server

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 ATLAS_URI = mongodb+srv://jrojas14:osNPlyIYS04edozl@cluster0.cqhkh2x.mongodb.net/chatApp?retryWrites=true&w=majority
 JWT_SECRET_KEY = superSecretKey199944556513484614654
+FRONT
